Reproduce hidden dialog issue

--- a/src/AvaloniaHangProject/Views/MainWindow.axaml
+++ b/src/AvaloniaHangProject/Views/MainWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:AvaloniaHangProject.ViewModels"
+        xmlns:views="clr-namespace:AvaloniaHangProject.Views"
         mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="500"
         x:Class="AvaloniaHangProject.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
@@ -32,14 +33,40 @@
             </Style>
         </Panel.Styles>
 
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical">
-            <Border Name="Window-Panel">
-                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Vertical">
-                    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
-                        <Button Content="Open Window Example" Command="{Binding OpenGuidedTourExampleCommand}" />
-                    </StackPanel>
-                </StackPanel>
-            </Border>
-        </StackPanel>
+        <Grid RowDefinitions="*,Auto">
+            <Grid.DataTemplates>
+                <DataTemplate DataType="{x:Type views:TabHeaderInfo}">
+                    <DockPanel>
+                        <TextBlock Text="{Binding Caption}"
+                                   Margin="8 0 8 0"
+                                   FontSize="12"
+                                   TextTrimming="CharacterEllipsis"
+                                   VerticalAlignment="Center">
+                            <TextBlock.Styles>
+                                <Style Selector="TextBlock">
+                                    <Setter Property="Foreground" Value="{DynamicResource SecondaryTextColor}"/>
+                                </Style>
+                                <Style Selector="TabItem:pointerover TextBlock">
+                                    <Setter Property="Foreground" Value="{DynamicResource PrimaryTextColor}"/>
+                                </Style>
+                                <Style Selector="TabItem:pressed TextBlock">
+                                    <Setter Property="Foreground" Value="{DynamicResource PrimaryTextColor}"/>
+                                </Style>
+                                <Style Selector="TabItem:selected TextBlock">
+                                    <Setter Property="Foreground" Value="{DynamicResource PrimaryTextColor}"/>
+                                </Style>
+                            </TextBlock.Styles>
+                        </TextBlock>
+                    </DockPanel>
+                </DataTemplate>
+            </Grid.DataTemplates>
+
+            <TabControl Name="tabs"
+                SelectionChanged="OnSelectedTabChanged"
+                Padding="0">
+            </TabControl>
+
+            <Button Grid.Row="1" Content="Add tab" Command="{Binding AddTabCommand}" />
+        </Grid>
     </Panel>
 </Window>
