--- a/src/AvaloniaHangProject/Views/DialogWindow.axaml
+++ b/src/AvaloniaHangProject/Views/DialogWindow.axaml
@@ -1,7 +1,7 @@
 <Window
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    x:Class="AvaloniaHangProject.Views.BaseGuidedTourDialogWindow"
+    x:Class="AvaloniaHangProject.Views.DialogWindow"
     ExtendClientAreaToDecorationsHint="True"
     ExtendClientAreaTitleBarHeightHint="-1"
     ExtendClientAreaChromeHints="NoChrome">
